--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                                     <i class="fas fa-map-marker-alt"></i>
                                     <span>Location</span>
                                 </div>
-                                <p>
+                                <pre>
                                     : lavasa,pune,india
-                                </p>
+                                </pre>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
